--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@types/echarts": "4.6.3",
-    "echarts": "4.8.0"
+    "echarts": "4.8.0",
+    "typescript": "3.9.6"
   },
   "devDependencies": {
     "parcel-bundler": "^1.6.1"
