--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   },
   "dependencies": {
     "@antv/g2": "4.0.12",
+    "@types/antd": "1.0.0",
     "@types/echarts": "4.6.3",
+    "@types/react": "16.9.42",
+    "@types/react-dom": "16.9.8",
+    "antd": "4.4.2",
     "echarts": "4.8.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "typescript": "3.9.6"
   },
   "devDependencies": {
