--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "16.9.8",
     "antd": "4.4.2",
     "echarts": "4.8.0",
+    "element-ui": "2.13.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "typescript": "3.9.6"
+    "typescript": "3.9.6",
+    "vue": "2.6.11"
   },
   "devDependencies": {
     "parcel-bundler": "^1.6.1"
